css/style.css
/* ... */
.btn-inverse:hover {
}

.btn-inverse:active {
  box-shadow: 0 0px 0 #1b1b1b;
  margin-top: 5px;
  margin-bottom: -5px;
}

.btn-link {
  text-shadow: none;
  text-transform: none;
  font-size: 1em;
  padding: 0;
  color: rgb(41, 128, 185);
  box-shadow: none;
  background: none !important;
  font-family: 'Lato', sans-serif;
}

.btn-link:hover {
  color: rgb(41, 128, 185);
}

/*
==================================
             Grid System
==================================
 */

.show-grid > div {
  background: #fff;
  padding: 10px;
  text-align: center;
  color: #000;
  margin-bottom: 15px;
}

/*
==================================
             Media Queries
==================================
 */

@media (max-width: 1199px) {
  .team-member {
    width: 22.237569061%;
    margin-bottom: 30px;
  }

  .team-member:nth-child(4n + 1) {
    margin-left: 0%;
  }

  .team-member:nth-child(6) {
    margin-left: 2.7624309392265194%;
  }

  .navbar-inner {
    padding-left: 20px;
  }
}

/* Portrait tablet to landscape and desktop */
@media (max-width: 979px) {
  h1 {
    font-size: 5em;
  }

  .slide {
    padding-top: 50px;
  }

  .welcome h1 {
    padding-top: 250px
  }

  .about-description {
    margin-bottom: 40px;
    width: 100%;
  }

  .about .title {
    margin-bottom: 0;
  }

  .oculus-video-wrapper {
    width: 100%;
    margin-bottom: 40px;
  }

  .oculus-video {
    padding: 0;
  }

  .controls h3 {
    font-size: 1.2em;
  }

  .controls p {
    font-size: 1.2em;
  }

  .team-member {
    width: 30.57%;
  }

  .team-member:nth-child(5n + 1) {
    margin-left: 2.7624309392265194%;
    /*border: 1px solid blue;*/
  }

  .team-member:nth-child(4n) {
    margin-right: 2.7624309392265194%;
  }

  .team-member:nth-child(3n + 1) {
    margin-left: 0;
  }
}

/* Landscape phone to portrait tablet */
@media (max-width: 768px) {
  body {
    padding-left: 0;
    padding-right: 0;
  }

  .slide {
    padding: 50px 0;
  }

  #subArea1, #subArea2, #subArea3, #subArea4 {
    padding: 50px 0;
  }

  h1 {
    font-size: 3em;
    text-align: center;
  }

  h2 {
    font-size: 2em;
    text-align: center;
  }

  .container {
    padding: 0 20px;
  }

  .welcome h1 {
    padding-top: 130px;
  }

  .controls:hover {
    margin-top: 0;
    margin-bottom: 40px;
  }

  .tech-grid:hover {
    margin-top: 0;
    margin-bottom: 40px;
  }

  .team-member:nth-child(4n) {
    margin-right: 2.7624309392265194%;
  }
}

@media (max-width: 706px) {
  .navigation {
    float: right;
    padding: 30px 0;
  }

  .navbar-inner a:nth-of-type(2) {
    display: none;
    padding-left: 0;
  }
}

/* Landscape phones and down */
@media (max-width: 480px) {
  .navbar-inner {
    padding: 0;
  }

  .navbar-inner a:nth-of-type(2) {
    display: none;
  }

  .nav-condensed-menu {
    display: block;
  }

  .navigation {
    display: none;
    float: left;
    margin: 0;
    margin-left: 80px;
    padding: 0;
  }

  .navigation li {
    display: block;
    padding: 10px;
    text-align: center;
    font-size: .8em;
  }

  .welcome h1 {
    font-size: 4em;
    padding: 0;
    padding-top: 300px;
  }

  .about h2 {
    font-size: 1.5em;
  }

  .quickstart .title, .techstack .title {
    margin-bottom: 20px;
  }

  .controls {
    width: 48%;
    margin-bottom: 20px;
    margin-left: 4%;
  }

  .controls:nth-child(5n + 1) {
    margin-left: 2%;
  }

  .controls:nth-child(2n + 1) {
    margin-left: 0;
  }

  .controls:nth-child(5) {
    margin-right: 50%
  }

  .controls-small:nth-child(2n) {
    margin-left: 0;
    margin-right: 4%;
  }

  .controls:hover {
    margin-top: 0;
    margin-bottom: 20px;
  }

  .tech-grid {
    width: 100%;
    margin-left: 0;
    margin-bottom: 20px;
  }

  .tech-grid:hover {
    margin-top: 0;
    margin-bottom: 20px;
  }

  .team-member {
    width: 100%;
    margin-left: 0;
  }

  .team-role {
    line-height: 1.5em;
  }
}

